refactor web client and fix git check

--- a/src/Makefile.windows
+++ b/src/Makefile.windows
@@ -2,13 +2,15 @@ CXXFLAGS = /Iinclude /Iexternal
 
 !IFDEF LODA_VERSION
 CXXFLAGS = $(CXXFLAGS) /DLODA_VERSION=$(LODA_VERSION)
+!ELSE
+CXXFLAGS = $(CXXFLAGS) /Z7
 !ENDIF
 
 !IFDEF LODA_PLATFORM
 CXXFLAGS = $(CXXFLAGS) /DLODA_PLATFORM=$(LODA_PLATFORM)
 !ENDIF
 
-SRCS = api_client.cpp benchmark.cpp big_number.cpp blocks.cpp commands.cpp config.cpp distribution.cpp evaluator.cpp extender.cpp external/jute.cpp file.cpp finder.cpp generator.cpp generator_v1.cpp generator_v2.cpp generator_v3.cpp generator_v4.cpp generator_v5.cpp generator_v6.cpp interpreter.cpp iterator.cpp main.cpp matcher.cpp memory.cpp metrics.cpp miner.cpp minimizer.cpp mutator.cpp number.cpp oeis_list.cpp oeis_manager.cpp oeis_maintenance.cpp oeis_sequence.cpp optimizer.cpp parser.cpp program.cpp program_util.cpp reducer.cpp semantics.cpp sequence.cpp setup.cpp stats.cpp test.cpp util.cpp
+SRCS = api_client.cpp benchmark.cpp big_number.cpp blocks.cpp commands.cpp config.cpp distribution.cpp evaluator.cpp extender.cpp external/jute.cpp file.cpp finder.cpp generator.cpp generator_v1.cpp generator_v2.cpp generator_v3.cpp generator_v4.cpp generator_v5.cpp generator_v6.cpp interpreter.cpp iterator.cpp main.cpp matcher.cpp memory.cpp metrics.cpp miner.cpp minimizer.cpp mutator.cpp number.cpp oeis_list.cpp oeis_manager.cpp oeis_maintenance.cpp oeis_sequence.cpp optimizer.cpp parser.cpp program.cpp program_util.cpp reducer.cpp semantics.cpp sequence.cpp setup.cpp stats.cpp test.cpp util.cpp web_client.cpp
 
 loda: external/jute.h external/jute.cpp $(SRCS)
 	cl /EHsc /Feloda.exe $(CXXFLAGS) $(SRCS)
