--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Build
         run: cd src && nmake.exe /F Makefile.windows
       - name: Test
-        run: loda.exe test
+        run: ./loda.exe test
