--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,7 +84,7 @@ jobs:
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
           asset_path: ./loda.exe
-          asset_name: loda-windows-19
+          asset_name: loda-windows-19.exe
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ github.token }}
