switch to c++17 standard

--- a/src/Makefile.windows
+++ b/src/Makefile.windows
@@ -1,4 +1,4 @@
-CXXFLAGS = /Iinclude /Iexternal /O2
+CXXFLAGS = /Iinclude /Iexternal /O2 /std:c++17
 
 !IFDEF LODA_VERSION
 CXXFLAGS = $(CXXFLAGS) /DLODA_VERSION=$(LODA_VERSION)
