--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-linux:
+  build-ubuntu-18:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: cd src && make
+      - name: Test
+        run: ./loda test
+      - name: Benchmark
+        run: ./loda benchmark
+  build-ubuntu-20:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -18,7 +28,7 @@ jobs:
         run: ./loda test
       - name: Benchmark
         run: ./loda benchmark
-  build-macos:
+  build-macos-11:
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
@@ -28,7 +38,7 @@ jobs:
         run: ./loda test
       - name: Benchmark
         run: ./loda benchmark
-  build-windows:
+  build-windows-2019:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
