--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
     "C_Cpp.clang_format_style": "Google",
     "editor.formatOnSave": true,
-    "makefile.makeDirectory": "${workspaceFolder}/src",
-    "makefile.makefilePath": "${workspaceFolder}/src/Makefile",
     "files.associations": {
         "map": "cpp",
         "chrono": "cpp"
-    }
+    },
+    "makefile.makeDirectory": "src"
 }
