--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "editor.formatOnSave": true,
     "files.associations": {
         "map": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "utility": "cpp"
     },
     "makefile.makeDirectory": "src"
 }
