--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,22 +55,22 @@ jobs:
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ github.token }}
-  build-raspberrypi64:
+  build-linux-arm64:
     needs: create-release
     runs-on:
       - self-hosted
-      - raspberrypi
+      - Linux
       - ARM64
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make loda LODA_PLATFORM=raspberrypi64 LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && make -f Makefile.linux-arm64 loda LODA_PLATFORM=raspberrypi64 LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
           asset_path: ./loda
-          asset_name: loda-raspberrypi64
+          asset_name: loda-linux-arm64
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ github.token }}
