--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,6 @@
+# This is a generic Makefile for development purposes.
+# Release are built using platform-specific Makefiles.
+
 CXXFLAGS = -Iinclude -Iexternal -O2 -g -Wall -fmessage-length=0 -std=c++17
 
 ifdef LODA_VERSION
@@ -11,7 +14,7 @@ endif
 OBJS = api_client.o benchmark.o big_number.o blocks.o commands.o config.o distribution.o evaluator.o evaluator_inc.o extender.o external/jute.o file.o finder.o generator.o generator_v1.o generator_v2.o generator_v3.o generator_v4.o generator_v5.o generator_v6.o interpreter.o iterator.o main.o matcher.o memory.o metrics.o miner.o minimizer.o mutator.o number.o oeis_list.o oeis_manager.o oeis_sequence.o optimizer.o parser.o program.o program_util.o reducer.o semantics.o setup.o sequence.o stats.o test.o util.o web_client.o
 
 loda: external/jute.h external/jute.cpp $(OBJS)
-	$(CXX) -o loda $(OBJS) $(LIBS)
+	$(CXX) -o loda $(OBJS)
 	[ -L ../loda ] || ( cd .. && ln -s src/loda loda )
 
 external/jute.h:
@@ -22,8 +25,3 @@ external/jute.cpp:
 
 clean:
 	rm -R -f $(OBJS) loda ../loda external
-
-test: loda
-	cd .. && ./loda test
-
-all: test
