--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.macos
+        run: |
+          cd src
+          make -f Makefile.macos-x86
+          mv loda loda-x86
+          make clean
+          make -f Makefile.macos-arm64
+          mv loda loda-x86
+          make clean
+          lipo -create -output loda loda-x86 loda-arm64
+          rm loda-x86 loda-arm64
+          file loda
       - name: Test
         run: ./loda test
       - name: Benchmark
