--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.macos loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: |
+          cd src
+          make -f Makefile.macos-x86 loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
+          mv loda loda-x86
+          make clean
+          make -f Makefile.macos-arm64 loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
+          mv loda loda-x86
+          make clean
+          lipo -create -output loda loda-x86 loda-arm64
+          rm loda-x86 loda-arm64
+          file loda
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
