--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
           mv loda loda-x86
           make clean
           make -f Makefile.macos-arm64 loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
-          mv loda loda-x86
+          mv loda loda-arm64
           make clean
           lipo -create -output loda loda-x86 loda-arm64
           rm loda-x86 loda-arm64
