--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.linux-x86
+        run: cd src && make -f Makefile.linux-x86.mk
       - name: Test
         run: ./loda test
       - name: Benchmark
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.linux-arm64
+        run: cd src && make -f Makefile.linux-arm64.mk
       - name: Test
         run: ./loda test
   build-macos:
@@ -36,12 +36,11 @@ jobs:
       - name: Build
         run: |
           cd src
-          make -f Makefile.macos-x86
+          make -f Makefile.macos-x86.mk
           mv loda loda-x86
           make clean
-          make -f Makefile.macos-arm64
+          make -f Makefile.macos-arm64.mk
           mv loda loda-arm64
-          make clean
           lipo -create -output loda loda-x86 loda-arm64
           rm loda-x86 loda-arm64
           file loda
@@ -55,7 +54,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
-        run: cd src && nmake.exe /F Makefile.windows
+        run: cd src && nmake.exe /F Makefile.windows.mk
       - name: Test
         run: ./loda.exe test
       - name: Benchmark
