--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.linux-x86 loda LODA_PLATFORM=linux-x86 LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && make -f Makefile.linux-x86.mk loda LODA_PLATFORM=linux-x86 LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
@@ -48,7 +48,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.linux-arm64 loda LODA_PLATFORM=linux-arm64 LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && make -f Makefile.linux-arm64.mk loda LODA_PLATFORM=linux-arm64 LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
@@ -66,12 +66,11 @@ jobs:
       - name: Build
         run: |
           cd src
-          make -f Makefile.macos-x86 loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
+          make -f Makefile.macos-x86.mk loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
           mv loda loda-x86
           make clean
-          make -f Makefile.macos-arm64 loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
+          make -f Makefile.macos-arm64.mk loda LODA_PLATFORM=macos LODA_VERSION=${{ needs.create-release.outputs.version }}
           mv loda loda-arm64
-          make clean
           lipo -create -output loda loda-x86 loda-arm64
           rm loda-x86 loda-arm64
           file loda
@@ -100,7 +99,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
       - name: Build
-        run: cd src && nmake.exe /F Makefile.windows loda LODA_PLATFORM=windows LODA_VERSION=${{ needs.create-release.outputs.version }}
+        run: cd src && nmake.exe /F Makefile.windows.mk loda LODA_PLATFORM=windows LODA_VERSION=${{ needs.create-release.outputs.version }}
       - name: Upload
         uses: actions/upload-release-asset@v1
         with:
