fix arithmetic exception

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "chrono": "cpp",
         "utility": "cpp",
         "stdexcept": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "limits": "cpp"
     },
     "makefile.makeDirectory": "src"
 }
