fix static linking of pthread library

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CXXFLAGS += -Iinclude -Iexternal -O2 -g -Wall -fmessage-length=0 -std=c++17
-LDFLAGS += -pthread -s
+LDFLAGS += -s
 
 ifdef LODA_VERSION
 CXXFLAGS += -DLODA_VERSION=$(LODA_VERSION)
