--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.linux-x86.mk
+        run: cd src && make -f Makefile.linux-x86.mk && ldd loda
       - name: Test
         run: ./loda test
       - name: Benchmark
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cd src && make -f Makefile.linux-arm64.mk
+        run: cd src && make -f Makefile.linux-arm64.mk && ldd loda
       - name: Test
         run: ./loda test
   build-macos:
