--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS += -Iinclude -Iexternal -O2 -g -Wall -Werror -fmessage-length=0 -std=c++17
+CXXFLAGS += -I. -Iinclude -Iexternal -O2 -g -Wall -Werror -fmessage-length=0 -std=c++17
 
 ifdef LODA_VERSION
 CXXFLAGS += -DLODA_VERSION=$(LODA_VERSION)
@@ -8,7 +8,7 @@ ifdef LODA_PLATFORM
 CXXFLAGS += -DLODA_PLATFORM=$(LODA_PLATFORM)
 endif
 
-OBJS = api_client.o benchmark.o big_number.o blocks.o boinc.o commands.o comments.o config.o distribution.o evaluator.o evaluator_inc.o evaluator_log.o expression.o expression_util.o extender.o external/jute.o file.o finder.o formula.o formula_gen.o generator.o generator_v1.o generator_v2.o generator_v3.o generator_v4.o generator_v5.o generator_v6.o generator_v7.o git.o interpreter.o iterator.o log.o main.o matcher.o memory.o metrics.o miner.o minimizer.o mutator.o number.o oeis_list.o oeis_manager.o oeis_program.o oeis_sequence.o optimizer.o pari.o parser.o process.o program.o program_util.o reducer.o semantics.o setup.o sequence.o stats.o test.o util.o web_client.o
+OBJS = api_client.o benchmark.o number/big_number.o blocks.o boinc.o commands.o comments.o config.o distribution.o evaluator.o evaluator_inc.o evaluator_log.o expression.o expression_util.o extender.o external/jute.o file.o finder.o formula.o formula_gen.o generator.o generator_v1.o generator_v2.o generator_v3.o generator_v4.o generator_v5.o generator_v6.o generator_v7.o git.o interpreter.o iterator.o log.o main.o matcher.o memory.o metrics.o miner.o minimizer.o mutator.o number/number.o oeis_list.o oeis_manager.o oeis_program.o oeis_sequence.o optimizer.o pari.o parser.o process.o program.o program_util.o reducer.o semantics.o setup.o sequence.o stats.o test.o util.o web_client.o
 
 loda: external/jute.h external/jute.cpp $(OBJS)
 	$(CXX) $(LDFLAGS) -o loda $(OBJS)
