--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Generate Version
         id: generate-version
-        run: echo "::set-output name=version::$(date +"%-y.%-m.%-d")"
+        run: echo "version=$(date +'%-y.%-m.%-d')" >> "$GITHUB_OUTPUT"
       - name: Create Release
         uses: actions/create-release@v1
         id: create-release
