disable arm64 builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,25 +39,25 @@ jobs:
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ github.token }}
-  build-linux-arm64:
-    needs: create-release
-    runs-on:
-      - self-hosted
-      - Linux
-      - ARM64
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        run: cd src && make -f Makefile.linux-arm64.mk loda LODA_PLATFORM=linux-arm64 LODA_VERSION=${{ needs.create-release.outputs.version }}
-      - name: Upload
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./loda
-          asset_name: loda-linux-arm64
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+#  build-linux-arm64:
+#    needs: create-release
+#    runs-on:
+#      - self-hosted
+#      - Linux
+#      - ARM64
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Build
+#        run: cd src && make -f Makefile.linux-arm64.mk loda LODA_PLATFORM=linux-arm64 LODA_VERSION=${{ needs.create-release.outputs.version }}
+#      - name: Upload
+#        uses: actions/upload-release-asset@v1
+#        with:
+#          upload_url: ${{ needs.create-release.outputs.upload_url }}
+#          asset_path: ./loda
+#          asset_name: loda-linux-arm64
+#          asset_content_type: application/octet-stream
+#        env:
+#          GITHUB_TOKEN: ${{ github.token }}
   build-macos:
     needs: create-release
     runs-on: macos-11
