--- a/src/Makefile
+++ b/src/Makefile
@@ -9,8 +9,10 @@ CXXFLAGS += -DLODA_PLATFORM=$(LODA_PLATFORM)
 endif
 
 OBJS = cmd/benchmark.o cmd/boinc.o cmd/commands.o cmd/main.o cmd/test.o \
+  eval/evaluator.o eval/evaluator_inc.o eval/interpreter.o eval/memory.o eval/minimizer.o eval/semantics.o \
   form/expression_util.o form/expression.o form/formula_gen.o form/formula_util.o form/formula.o form/pari.o form/variant.o \
-  lang/analyzer.o lang/big_number.o lang/comments.o lang/evaluator.o lang/evaluator_inc.o lang/interpreter.o lang/memory.o lang/minimizer.o lang/number.o lang/optimizer.o lang/parser.o lang/program.o lang/program_util.o lang/semantics.o lang/sequence.o \
+  lang/analyzer.o lang/comments.o lang/constants.o lang/optimizer.o lang/parser.o lang/program.o lang/program_util.o \
+  math/big_number.o math/number.o math/sequence.o \
   mine/api_client.o mine/blocks.o mine/config.o mine/distribution.o mine/extender.o mine/finder.o mine/generator_v1.o mine/generator_v2.o mine/generator_v3.o mine/generator_v4.o mine/generator_v5.o mine/generator_v6.o mine/generator_v7.o mine/generator_v8.o mine/generator.o mine/iterator.o mine/matcher.o mine/miner.o mine/mutator.o mine/reducer.o mine/stats.o \
   oeis/oeis_list.o oeis/oeis_manager.o oeis/oeis_program.o oeis/oeis_sequence.o \
   sys/file.o sys/git.o sys/jute.o sys/log.o sys/metrics.o sys/process.o sys/setup.o sys/util.o sys/web_client.o
