--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build
         run: cd src && make -f Makefile.linux-arm64.mk
       - name: Test
-        run: ./loda test
+        run: ./loda test-fast
   build-macos:
     runs-on: macos-13
     steps:
