--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS += -I. -O2 -g -Wall -Werror -fmessage-length=0 -std=c++17
+CXXFLAGS += -I. -g -Wall -Werror -fmessage-length=0 -std=c++17
 
 ifdef LODA_VERSION
 CXXFLAGS += -DLODA_VERSION=$(LODA_VERSION)
@@ -17,21 +17,22 @@ OBJS = cmd/benchmark.o cmd/boinc.o cmd/commands.o cmd/main.o cmd/test.o \
   oeis/oeis_list.o oeis/oeis_manager.o oeis/oeis_program.o oeis/oeis_sequence.o \
   sys/file.o sys/git.o sys/jute.o sys/log.o sys/metrics.o sys/process.o sys/setup.o sys/util.o sys/web_client.o
 
+loda: CXXFLAGS += -O2
 loda: $(OBJS)
 	$(CXX) $(LDFLAGS) -o loda $(OBJS)
 	[ -L ../loda ] || ( cd .. && ln -s src/loda loda )
 	du -sh loda
 
-coverage: CXXFLAGS += -fprofile-arcs -ftest-coverage -O0
+coverage: CXXFLAGS += -O0 -fprofile-arcs -ftest-coverage
 coverage: LDFLAGS += --coverage
 coverage: $(OBJS)
 	$(CXX) $(LDFLAGS) -o loda $(OBJS)
 	[ -L ../loda ] || ( cd .. && ln -s src/loda loda )
-	pushd .. && ./loda test && popd
+	cd .. && ./loda test && cd src
 	gcov $(OBJS:.o=.cpp)
 	mkdir coverage
 	lcov --ignore-errors format,inconsistent -c -d . -o coverage/coverage.info
-	lcov --ignore-errors format,inconsistent -r coverage/coverage.info '/Library/*' -o coverage/coverage-clean.info
+	lcov --ignore-errors format,inconsistent,unused -r coverage/coverage.info '/Library/*' '/usr/*' -o coverage/coverage-clean.info
 	genhtml --ignore-errors category,inconsistent coverage/coverage-clean.info -o coverage
 
 clean:
