--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,10 +56,10 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
-      - name: Coverage
+      - name: Generate
         run: sudo apt install lcov && cd src && make -f Makefile.linux-x86.mk coverage
-      - name: Report
-        uses: pavi2410/html-preview-action@v4
+      - name: Upload
+        uses: actions/upload-artifact@v4
         with:
-          html_file: src/coverage/index.html
-          job_summary: true
+          name: code-coverage-report
+          path: src/coverage/
